Removing auth middleware package
